src/grammar/CFS_MissionParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .CFS_MissionListener import CFS_MissionListener
    from .CFS_MissionVisitor import CFS_MissionVisitor
else:
    from CFS_MissionListener import CFS_MissionListener
    from CFS_MissionVisitor import CFS_MissionVisitor


class CFS_MissionParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__13=1
    T__12=2
    T__11=3
    T__10=4
    T__9=5
    T__8=6
    T__7=7
    T__6=8
    T__5=9
    T__4=10
    T__3=11
    T__2=12
    T__1=13
    T__0=14
    ID=15
    INT=16
    DOUBLE=17
    WS=18
    COMMENT=19
    LINE_COMMENT=20

    tokenNames = [ u"<INVALID>", u"'application'", u"'command'", u"'msg'", 
                   u"'global'", u"'commandCodes'", u"'='", u"';'", u"'table'", 
                   u"'{'", u"'housekeeping'", u"'version'", u"'}'", u"'critical'", 
                   u"'eventIDs'", u"ID", u"INT", u"DOUBLE", u"WS", u"COMMENT", 
                   u"LINE_COMMENT" ]

    RULE_start = 0
    RULE_application = 1
    RULE_app_name = 2
    RULE_event_ids = 3
    RULE_event_id = 4
    RULE_id_name = 5
    RULE_id_value = 6
    RULE_command_codes = 7
    RULE_command_code = 8
    RULE_cmd_name = 9
    RULE_cmd_value = 10
    RULE_msg = 11
    RULE_msgtype = 12
    RULE_msgname = 13
    RULE_field = 14
    RULE_datatype = 15
    RULE_fieldname = 16
    RULE_version = 17
    RULE_version_name = 18
    RULE_version_value = 19

    ruleNames =  [ u"start", u"application", u"app_name", u"event_ids", 
                   u"event_id", u"id_name", u"id_value", u"command_codes", 
                   u"command_code", u"cmd_name", u"cmd_value", u"msg", u"msgtype", 
                   u"msgname", u"field", u"datatype", u"fieldname", u"version", 
                   u"version_name", u"version_value" ]

    def __init__(self, input):
        super(CFS_MissionParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CFS_MissionParser.EOF, 0)

        def application(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.ApplicationContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.ApplicationContext,i)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitStart(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CFS_MissionParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CFS_MissionParser.T__13:
                self.state = 40 
                self.application()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ApplicationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.ApplicationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def event_ids(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.Event_idsContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.Event_idsContext,i)


        def command_codes(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.Command_codesContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.Command_codesContext,i)


        def msg(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.MsgContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.MsgContext,i)


        def version(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.VersionContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.VersionContext,i)


        def app_name(self):
            return self.getTypedRuleContext(CFS_MissionParser.App_nameContext,0)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_application

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterApplication(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitApplication(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitApplication(self)
            else:
                return visitor.visitChildren(self)




    def application(self):

        localctx = CFS_MissionParser.ApplicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_application)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(self.T__13)
            self.state = 49 
            self.app_name()
            self.state = 50
            self.match(self.T__5)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CFS_MissionParser.T__0:
                self.state = 51 
                self.event_ids()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CFS_MissionParser.T__9:
                self.state = 57 
                self.command_codes()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__12) | (1 << self.T__10) | (1 << self.T__6) | (1 << self.T__4) | (1 << self.T__1))) != 0):
                self.state = 63 
                self.msg()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CFS_MissionParser.T__3:
                self.state = 69 
                self.version()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(self.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class App_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.App_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CFS_MissionParser.ID, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_app_name

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterApp_name(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitApp_name(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitApp_name(self)
            else:
                return visitor.visitChildren(self)




    def app_name(self):

        localctx = CFS_MissionParser.App_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_app_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Event_idsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Event_idsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def event_id(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.Event_idContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.Event_idContext,i)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_event_ids

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterEvent_ids(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitEvent_ids(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitEvent_ids(self)
            else:
                return visitor.visitChildren(self)




    def event_ids(self):

        localctx = CFS_MissionParser.Event_idsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_event_ids)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(self.T__0)
            self.state = 80
            self.match(self.T__5)
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81 
                self.event_id()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CFS_MissionParser.ID):
                    break

            self.state = 86
            self.match(self.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Event_idContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Event_idContext, self).__init__(parent, invokingState)
            self.parser = parser

        def id_name(self):
            return self.getTypedRuleContext(CFS_MissionParser.Id_nameContext,0)


        def id_value(self):
            return self.getTypedRuleContext(CFS_MissionParser.Id_valueContext,0)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_event_id

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterEvent_id(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitEvent_id(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitEvent_id(self)
            else:
                return visitor.visitChildren(self)




    def event_id(self):

        localctx = CFS_MissionParser.Event_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_event_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self.id_name()
            self.state = 89
            self.match(self.T__8)
            self.state = 90 
            self.id_value()
            self.state = 91
            self.match(self.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Id_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CFS_MissionParser.ID, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_id_name

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterId_name(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitId_name(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitId_name(self)
            else:
                return visitor.visitChildren(self)




    def id_name(self):

        localctx = CFS_MissionParser.Id_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_valueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Id_valueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CFS_MissionParser.INT, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_id_value

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterId_value(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitId_value(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitId_value(self)
            else:
                return visitor.visitChildren(self)




    def id_value(self):

        localctx = CFS_MissionParser.Id_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(self.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Command_codesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Command_codesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def command_code(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.Command_codeContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.Command_codeContext,i)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_command_codes

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterCommand_codes(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitCommand_codes(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitCommand_codes(self)
            else:
                return visitor.visitChildren(self)




    def command_codes(self):

        localctx = CFS_MissionParser.Command_codesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_command_codes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(self.T__9)
            self.state = 98
            self.match(self.T__5)
            self.state = 100 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 99 
                self.command_code()
                self.state = 102 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CFS_MissionParser.ID):
                    break

            self.state = 104
            self.match(self.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Command_codeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Command_codeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def cmd_name(self):
            return self.getTypedRuleContext(CFS_MissionParser.Cmd_nameContext,0)


        def cmd_value(self):
            return self.getTypedRuleContext(CFS_MissionParser.Cmd_valueContext,0)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_command_code

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterCommand_code(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitCommand_code(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitCommand_code(self)
            else:
                return visitor.visitChildren(self)




    def command_code(self):

        localctx = CFS_MissionParser.Command_codeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_command_code)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106 
            self.cmd_name()
            self.state = 107
            self.match(self.T__8)
            self.state = 108 
            self.cmd_value()
            self.state = 109
            self.match(self.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Cmd_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CFS_MissionParser.ID, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_cmd_name

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterCmd_name(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitCmd_name(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitCmd_name(self)
            else:
                return visitor.visitChildren(self)




    def cmd_name(self):

        localctx = CFS_MissionParser.Cmd_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmd_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_valueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Cmd_valueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CFS_MissionParser.INT, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_cmd_value

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterCmd_value(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitCmd_value(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitCmd_value(self)
            else:
                return visitor.visitChildren(self)




    def cmd_value(self):

        localctx = CFS_MissionParser.Cmd_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cmd_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(self.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MsgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.MsgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def field(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.FieldContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.FieldContext,i)


        def msgname(self):
            return self.getTypedRuleContext(CFS_MissionParser.MsgnameContext,0)


        def msgtype(self):
            return self.getTypedRuleContext(CFS_MissionParser.MsgtypeContext,0)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_msg

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterMsg(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitMsg(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitMsg(self)
            else:
                return visitor.visitChildren(self)




    def msg(self):

        localctx = CFS_MissionParser.MsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_msg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115 
            self.msgtype()
            self.state = 116
            self.match(self.T__11)
            self.state = 117 
            self.msgname()
            self.state = 118
            self.match(self.T__5)
            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119 
                self.field()
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CFS_MissionParser.ID):
                    break

            self.state = 124
            self.match(self.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MsgtypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.MsgtypeContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_msgtype

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterMsgtype(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitMsgtype(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitMsgtype(self)
            else:
                return visitor.visitChildren(self)




    def msgtype(self):

        localctx = CFS_MissionParser.MsgtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_msgtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__12) | (1 << self.T__10) | (1 << self.T__6) | (1 << self.T__4) | (1 << self.T__1))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MsgnameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.MsgnameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CFS_MissionParser.ID, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_msgname

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterMsgname(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitMsgname(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitMsgname(self)
            else:
                return visitor.visitChildren(self)




    def msgname(self):

        localctx = CFS_MissionParser.MsgnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_msgname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.FieldContext, self).__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(CFS_MissionParser.DatatypeContext,0)


        def fieldname(self):
            return self.getTypedRuleContext(CFS_MissionParser.FieldnameContext,0)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_field

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterField(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitField(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = CFS_MissionParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130 
            self.datatype()
            self.state = 131 
            self.fieldname()
            self.state = 132
            self.match(self.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatatypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.DatatypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CFS_MissionParser.ID, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_datatype

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterDatatype(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitDatatype(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitDatatype(self)
            else:
                return visitor.visitChildren(self)




    def datatype(self):

        localctx = CFS_MissionParser.DatatypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_datatype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldnameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.FieldnameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CFS_MissionParser.ID, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_fieldname

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterFieldname(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitFieldname(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitFieldname(self)
            else:
                return visitor.visitChildren(self)




    def fieldname(self):

        localctx = CFS_MissionParser.FieldnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_fieldname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.VersionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def version_name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.Version_nameContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.Version_nameContext,i)


        def version_value(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CFS_MissionParser.Version_valueContext)
            else:
                return self.getTypedRuleContext(CFS_MissionParser.Version_valueContext,i)


        def getRuleIndex(self):
            return CFS_MissionParser.RULE_version

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterVersion(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitVersion(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = CFS_MissionParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_version)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(self.T__3)
            self.state = 139
            self.match(self.T__5)
            self.state = 145 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140 
                self.version_name()
                self.state = 141
                self.match(self.T__8)
                self.state = 142 
                self.version_value()
                self.state = 143
                self.match(self.T__7)
                self.state = 147 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CFS_MissionParser.ID):
                    break

            self.state = 149
            self.match(self.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Version_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CFS_MissionParser.Version_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CFS_MissionParser.ID, 0)

        def getRuleIndex(self):
            return CFS_MissionParser.RULE_version_name

        def enterRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.enterVersion_name(self)

        def exitRule(self, listener):
            if isinstance( listener, CFS_MissionListener ):
                listener.exitVersion_name(self)

        def accept(self, visitor):
            if isinstance( visitor, CFS_MissionVisitor ):
                return visitor.visitVersion_name(self)
            else:
                return visitor.visitChildren(self)




    def version_name(self):
